--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ActionCableExample</title>
+    <title>In-House Demo App</title>
     <%= csrf_meta_tags %>
-
+    <%= favicon_link_tag 'favicon.ico' %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= action_cable_meta_tag %>
@@ -59,13 +59,6 @@
     <!-- /.login-box-body -->
   </div>
   <!-- /.login-box -->
-
-  <!-- jQuery 2.2.0 -->
-  <script src="../../plugins/jQuery/jQuery-2.2.0.min.js"></script>
-  <!-- Bootstrap 3.3.6 -->
-  <script src="../../bootstrap/js/bootstrap.min.js"></script>
-  <!-- iCheck -->
-  <script src="../../plugins/iCheck/icheck.min.js"></script>
   <script>
     $(function () {
       $('input').iCheck({
