--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,11 +5,11 @@ LIN/GEMS
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import "font-awesome";
-@import "ionicons";
-@import "admin-lte";
-@import "iCheck/all";
-@import "datatables/dataTables.bootstrap";
+// @import "font-awesome";
+// @import "ionicons";
+@import "adminlte/adminlte.css";
+@import "adminlte/skins/_all-skins.css";
+@import "adminlte/plugins/iCheck/flat/blue.css";
 
 
 /*
