--- a/app/views/layouts/_navbar_links.html.erb
+++ b/app/views/layouts/_navbar_links.html.erb
@@ -13,7 +13,7 @@
 <ul class="nav navbar-nav navbar-right">
   <% if current_user %>
     <li>
-      <%= link_to "Log Out", logout_path, method: "delete" %>
+      <%= link_to "Log Out", destroy_user_session_path, method: "delete" %>
     </li>
   <% else %>
     <li><%= link_to "Sign Up", new_user_registration_path %></li>
