--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
     <%= render partial: 'layouts/navbar' %>
-
+    <%= render partial: 'layouts/flash_messages'%>
     <div class="container">
       <%= yield %>
     </div>
