--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,8 +1,13 @@
-<div class="jumbotron">
-  <h1>Welcome to Chatty!</h1>
-  <p>The Rails 5 + Action Cable example app</p>
-  <%if current_user%>
-    <p><span class="glyphicon glyphicon-heart"></span> Nice to see you, <%= current_user.username%> <span class="glyphicon glyphicon-heart"></span></p>
-  <%end%>
-  <p>Sign up or log in, then create a chatroom or browse existing rooms to start chatting.</p>
-</div>
+  <div class="content-header">
+    <h1>
+      Welcome to the In-House demo web application
+      <small>Nice to see you again, <%= current_user.username%></small>
+    </h1>
+    <ol class="breadcrumb">
+      <li class="active"><i class="fa fa-dashboard"></i> Home</li>
+    </ol>
+  </div>
+
+  <!-- Main content -->
+  <div class="content body">
+  </div>
