--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -1,40 +1,15 @@
-<!-- <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <%= link_to "Chatty", root_path, class: "navbar-brand" %>
-    </div>
-
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-    </div>
-  </div>
-</nav>
- -->
 
       <header class="main-header">
-        <!-- Logo -->
-        <!-- Logo -->
-        <a href="../index2.html" class="logo">
-          <!-- mini logo for sidebar mini 50x50 pixels -->
+        <a href="<%= root_path %>" class="logo">
           <span class="logo-mini"><%= image_tag "dashboard_logo_full.png", class: "", style: "max-height: 40px; margin-top: -2.5px" %></span>
-          <!-- logo for regular state and mobile devices -->
           <span class="logo-lg">Dashboard</span>
         </a>
         <nav class="navbar navbar-static-top" role="navigation">
-          <!-- Sidebar toggle button-->
           <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
             <span class="sr-only">Toggle navigation</span>
           </a>
-          <!-- Navbar Right Menu -->
           <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
-              <!-- Messages: style can be found in dropdown.less-->
               <li class="dropdown messages-menu">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                   <i class="fa fa-envelope-o"></i>
@@ -43,12 +18,11 @@
                 <ul class="dropdown-menu">
                   <li class="header">You have 4 messages</li>
                   <li>
-                    <!-- inner menu: contains the actual data -->
                     <ul class="menu">
-                      <li><!-- start message -->
+                      <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                            <img src="" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             Sender Name
@@ -56,14 +30,13 @@
                           </h4>
                           <p>Message Excerpt</p>
                         </a>
-                      </li><!-- end message -->
+                      </li>
                       ...
                     </ul>
                   </li>
                   <li class="footer"><a href="#">See All Messages</a></li>
                 </ul>
               </li>
-              <!-- Notifications: style can be found in dropdown.less -->
               <li class="dropdown notifications-menu">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                   <i class="fa fa-bell-o"></i>
@@ -72,7 +45,6 @@
                 <ul class="dropdown-menu">
                   <li class="header">You have 10 notifications</li>
                   <li>
-                    <!-- inner menu: contains the actual data -->
                     <ul class="menu">
                       <li>
                         <a href="#">
@@ -85,7 +57,6 @@
                   <li class="footer"><a href="#">View all</a></li>
                 </ul>
               </li>
-              <!-- Tasks: style can be found in dropdown.less -->
               <li class="dropdown tasks-menu">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                   <i class="fa fa-flag-o"></i>
@@ -94,9 +65,8 @@
                 <ul class="dropdown-menu">
                   <li class="header">You have 9 tasks</li>
                   <li>
-                    <!-- inner menu: contains the actual data -->
                     <ul class="menu">
-                      <li><!-- Task item -->
+                      <li>
                         <a href="#">
                           <h3>
                             Design some buttons
@@ -108,8 +78,7 @@
                             </div>
                           </div>
                         </a>
-                      </li><!-- end task item -->
-                      ...
+                      </li>
                     </ul>
                   </li>
                   <li class="footer">
@@ -117,23 +86,19 @@
                   </li>
                 </ul>
               </li>
-              <!-- User Account: style can be found in dropdown.less -->
               <li class="dropdown user user-menu">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                   <%= image_tag current_user.avatar, class: "user-image", alt: current_user.username %>
                   <span class="hidden-xs"><%= current_user.username %></span>
                 </a>
                 <ul class="dropdown-menu">
-                  <!-- User image -->
                   <li class="user-header">
                     <%= image_tag current_user.avatar, class: "img-circle", alt: current_user.username %>
                     <p>
-                      <!-- Alexander Pierce - Web Developer -->
                       <%= current_user.full_name.blank? ? current_user.username : "#{current_user.full_name} - #{current_user.username}" %>
                       <small>Member since <%= current_user.created_at.strftime("%b. %Y")  %></small>
                     </p>
                   </li>
-                  <!-- Menu Body -->
                   <li class="user-body">
                     <div class="col-xs-4 text-center">
                       <a href="#">Followers</a>
@@ -145,7 +110,6 @@
                       <a href="#">Friends</a>
                     </div>
                   </li>
-                  <!-- Menu Footer-->
                   <li class="user-footer">
                     <div class="pull-left">
                       <a href="#" class="btn btn-default btn-flat">Profile</a>
