--- a/app/views/layouts/shared/_sidebar.html.erb
+++ b/app/views/layouts/shared/_sidebar.html.erb
@@ -1,35 +1,46 @@
-      <!-- Left side column. contains the logo and sidebar -->
-      <aside class="main-sidebar">
-        <!-- sidebar: style can be found in sidebar.less -->
-        <div class="sidebar" id="scrollspy">
+<aside class="main-sidebar">
+  <div class="sidebar" id="scrollspy">
+    <!-- Sidebar user panel (optional) -->
+    <div class="user-panel">
+      <div class="pull-left image">
+        <%= image_tag current_user.avatar, class: "img-circle", alt: current_user.username %>
+      </div>
+      <div class="pull-left info">
+        <p><%= current_user.full_name.blank? ? current_user.username : "#{current_user.full_name} - #{current_user.username}" %></p>
+        <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+      </div>
+    </div>
 
-          <!-- sidebar menu: : style can be found in sidebar.less -->
-          <ul class="nav sidebar-menu">
-            <!-- <li class="header">Where do you want to go?</li> -->
-            <li class="active"><a href="#introduction"><i class="fa fa-circle-o"></i> Introduction</a></li>
-            <li><a href="#download"><i class="fa fa-circle-o"></i> Download</a></li>
-            <li><a href="#dependencies"><i class="fa fa-circle-o"></i> Dependencies</a></li>
-            <li><a href="#advice"><i class="fa fa-circle-o"></i> Advice</a></li>
-            <li><a href="#layout"><i class="fa fa-circle-o"></i> Layout</a></li>
-            <li><a href="#adminlte-options"><i class="fa fa-circle-o"></i> Javascript Options</a></li>
-            <li class="treeview" id="scrollspy-components">
-              <a href="javascript:void(0)"><i class="fa fa-circle-o"></i> Components</a>
-              <ul class="nav treeview-menu">
-                <li><a href="#component-main-header">Main Header</a></li>
-                <li><a href="#component-sidebar">Sidebar</a></li>
-                <li><a href="#component-control-sidebar">Control Sidebar</a></li>
-                <li><a href="#component-info-box">Info Box</a></li>
-                <li><a href="#component-box">Boxes</a></li>
-                <li><a href="#component-direct-chat">Direct Chat</a></li>
-              </ul>
-            </li>
-            <li><a href="#plugins"><i class="fa fa-circle-o"></i> Plugins</a></li>
-            <li><a href="#browsers"><i class="fa fa-circle-o"></i> Browser Support</a></li>
-            <li><a href="#upgrade"><i class="fa fa-circle-o"></i> Upgrade Guide</a></li>
-            <li><a href="#implementations"><i class="fa fa-circle-o"></i> Implementations</a></li>
-            <li><a href="#faq"><i class="fa fa-circle-o"></i> FAQ</a></li>
-            <li><a href="#license"><i class="fa fa-circle-o"></i> License</a></li>
-          </ul>
-        </div>
-        <!-- /.sidebar -->
-      </aside>
+    <!-- search form (Optional) -->
+    <form action="#" method="get" class="sidebar-form">
+      <div class="input-group">
+        <input type="text" name="q" class="form-control" placeholder="Search...">
+        <span class="input-group-btn">
+          <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
+          </button>
+        </span>
+      </div>
+    </form>
+    <ul class="nav sidebar-menu">
+      <li class="header">MAIN NAVIGATION</li>
+      <li>
+        <a href="<%= root_path %>">
+          <i class="fa fa-dashboard"></i> <span>Dashboard</span></i>
+        </a>
+      </li>
+      <li class="treeview">
+        <a href="#">
+          <i class="fa fa-comments-o"></i> <span>Chatrooms</span> <i class="fa fa-angle-left pull-right"></i>
+        </a>
+        <ul class="treeview-menu">
+          <li>
+            <a href="<%= new_chatroom_path %>"><i class="fa fa-circle-o"></i> New Chatroom</a>
+          </li>
+          <li>
+            <a href="<%= chatrooms_path %>"><i class="fa fa-circle-o"></i> View all</a>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+</aside>
