--- a/app/assets/stylesheets/chatrooms.scss
+++ b/app/assets/stylesheets/chatrooms.scss
@@ -1,30 +1,30 @@
-.chatroom-form {
-  margin: 5%;
-  text-align: center;
-}
+// .chatroom-form {
+//   margin: 5%;
+//   text-align: center;
+// }
 
-#create-chatroom {
-  margin-top: 5%;
-}
+// #create-chatroom {
+//   margin-top: 5%;
+// }
 
-#chatroom-index {
-  list-style: none;
-  font-size: 22px;
-  padding-left: 0px;
-}
+// #chatroom-index {
+//   list-style: none;
+//   font-size: 22px;
+//   padding-left: 0px;
+// }
 
-#chatroom-index > li {
-  margin-left: 0px;
-}
+// #chatroom-index > li {
+//   margin-left: 0px;
+// }
 
-#chatrooms {
-  text-align: center;
-}
+// #chatrooms {
+//   text-align: center;
+// }
 
-#chatroom-title {
-  text-align: center;
-}
+// #chatroom-title {
+//   text-align: center;
+// }
 
-#hidden {
-  display: none;
-}
+// #hidden {
+//   display: none;
+// }
