--- a/app/views/layouts/shared/_sidebar.html.erb
+++ b/app/views/layouts/shared/_sidebar.html.erb
@@ -3,7 +3,7 @@
     <!-- Sidebar user panel (optional) -->
     <div class="user-panel">
       <div class="pull-left image">
-        <%= image_tag current_user.avatar, class: "img-circle", alt: current_user.username %>
+        <%= image_tag current_user.avatar.url(:thumb), class: "img-circle", alt: current_user.username %>
       </div>
       <div class="pull-left info">
         <p><%= current_user.full_name.blank? ? current_user.username : "#{current_user.full_name} - #{current_user.username}" %></p>
