--- a/app/views/messages/_message_form.html.erb
+++ b/app/views/messages/_message_form.html.erb
@@ -1,7 +1,10 @@
 <%=form_for message, remote: true, authenticity_token: true do |f|%>
-  <%= f.label :your_message%>:
-  <%= f.text_area :content, class: "form-control", data: {textarea: "message"}%>
+  <div class="input-group">
+    <%= f.text_field :content, class: "form-control", data: {textarea: "message"}%>
 
-  <%= f.hidden_field :chatroom_id, value: chatroom.id %>
-  <%= f.submit "send", class: "btn btn-primary", style: "display: none", data: {send: "message"}%>
+    <%= f.hidden_field :chatroom_id, value: chatroom.id %>
+    <span class="input-group-btn">
+      <%= f.submit "Send", class: "btn btn-default btn-flat", data: {send: "message"}%>
+    </span>
+  </div>
 <%end%>
