Adds change from input to textarea on message form

--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -13,7 +13,7 @@
   <!-- Main content -->
   <div class="content body">
     <div class="row">
-      <div class="col-sm-4 col-sm-offset-4">
+      <div class="col-md-4 col-md-offset-4 col-xs-8 col-xs-offset-2">
         <div class="box box-default direct-chat direct-chat-warning">
           <div class="box-header with-border">
             <h3 class="box-title"><%= @chatroom.topic %></h3>
